# boost_log_playground

./: 1_trivial_logging.cpp  2_trivial_logging_with_filters.cpp  3_file_logging.cpp  4_custom_sink.cpp  CMakeLists.txt
